--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,12 @@ body {
 header {
   box-shadow: 1px 1px 1px 1px #626262;
   background-color: #626262;
-  position: fixed;
+  /* position: fixed; */
   height: 100px;
-  width: 70%;
-  top: 0px;
-  left: calc(50% - 35%);
+  width: 1344px;
+  margin: auto;
+  /* top: 0px;
+  left: calc(50% - 35%); */
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -65,8 +66,8 @@ header input:focus {
 
 /* MAIN CONTAINER */
 .main-container {
-  width: 70%;
-  margin: 110px auto auto auto;
+  width: 1344px;
+  margin: 20px auto auto auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -74,7 +75,7 @@ header input:focus {
   column-gap: 5px;
 }
 
-.main-container div {
+.main-container .border {
   border: 4px solid #423f3f;
   box-shadow: 2px 2px 2px 2px #525050;
   background-color: #7c7a7a;
@@ -95,20 +96,19 @@ header input:focus {
 
 .icon {
   margin: 70px auto auto 230px;
-  /* border: 1px solid red; */
+
   grid-row-start: 1;
   grid-row-end: 3;
   grid-column-start: 1;
   grid-column-end: 2;
   transform: scale(3, 3);
-  /* z-index: -1; */
 }
 
 .country {
   margin: 50px auto auto -70px;
   text-align: center;
   font-size: 60px;
-  /* border: 1px solid red; */
+
   grid-row-start: 1;
   grid-row-end: 2;
   grid-column-start: 2;
@@ -119,7 +119,6 @@ header input:focus {
   font-size: 40px;
   text-align: center;
 
-  /* border: 1px solid red; */
   grid-row-start: 2;
   grid-row-end: 3;
   grid-column-start: 2;
@@ -130,7 +129,7 @@ header input:focus {
   margin-top: 20px;
   text-align: center;
   font-size: 35px;
-  /* border: 1px solid red; */
+
   grid-row-start: 3;
   grid-row-end: 4;
   grid-column-start: 1;
@@ -138,12 +137,10 @@ header input:focus {
 }
 
 .feels-like {
-  /* width: fit-content;
-  height: fit-content; */
   margin-top: 5px;
   text-align: center;
   font-size: 35px;
-  /* border: 1px solid red; */
+
   grid-row-start: 4;
   grid-row-end: 5;
   grid-column-start: 1;
@@ -152,6 +149,7 @@ header input:focus {
 
 /* ADDITIONAL DATA */
 .additional-data {
+  padding-bottom: 20px;
   font-size: 18px;
   text-align: center;
 }
@@ -163,6 +161,7 @@ header input:focus {
 /* SUN MOON */
 
 .sun-moon {
+  padding-bottom: 28px;
   font-size: 18px;
   text-align: center;
 }
@@ -173,11 +172,17 @@ header input:focus {
 
 /* 24 HOURS */
 .tf-hours {
-  grid-column-start: 1;
-  grid-column-end: 4;
+  /* grid-column-start: 1;
+  grid-column-end: 4; */
   height: 200px;
   display: flex;
   flex-wrap: wrap;
+}
+.tf-hours-wrapper {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  width: fit-content;
+  height: fit-content;
 }
 .hour {
   display: grid;
@@ -186,6 +191,8 @@ header input:focus {
   width: 8.333%;
   height: 50%;
   padding: 0;
+  box-shadow: none;
+  border: 1px solid black;
 }
 
 .hour img {
@@ -218,4 +225,98 @@ header input:focus {
   grid-row-start: 2;
   grid-row-end: 3;
   /* border: 2px solid red; */
+}
+
+@media (max-width: 440px) {
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 5px;
+  }
+
+  .temp-and-location {
+    /* grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 2; */
+    width: 100%;
+  }
+
+  .icon {
+    margin: 20px auto auto 70px;
+    transform: scale(1.6, 1.6);
+  }
+  .country {
+    margin: 25px auto auto -20px;
+    text-align: center;
+    font-size: 15px;
+  }
+  .city {
+    margin: 10px auto auto -20px;
+    font-size: 12px;
+    text-align: center;
+  }
+
+  .current-temp {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 15px;
+  }
+  .feels-like {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 15px;
+  }
+
+  .additional-data {
+    width: 100%;
+  }
+
+  .sun-moon {
+    width: 100%;
+  }
+
+  .tf-hours {
+    width: fit-content;
+    height: 100px;
+    flex-wrap: nowrap;
+    overflow: scroll;
+  }
+
+  .tf-hours-wrapper {
+    width: 100%;
+    height: 100px;
+    overflow: scroll;
+  }
+
+  .hour {
+    height: 100%;
+    width: 100px;
+  }
+  .hour img {
+    transform: scale(0.5, 0.5);
+    margin-left: -10px;
+    margin-top: -10px;
+  }
+
+  .temp {
+    text-align: center;
+    height: fit-content;
+    margin-top: 40%;
+    margin-left: -15px;
+  }
+
+  .time {
+    text-align: center;
+  }
+
+  header {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  header h1 {
+    font-size: 25px;
+  }
 }
